BizfiCommissionEngine/src/objects/Commission_Agreement__c.object
<CustomObject>
    <description>The commission agreement object is a junction object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commission Agreement</relationshipLabel>
        <relationshipName>Commission_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payroll_Cycle_End_Date__c</fullName>
        <label>First Payroll Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payroll_Pay_Date__c</fullName>
        <label>First Payroll Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Frequency__c</fullName>
        <label>Pay Period Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structure</label>
        <referenceTo>Commission_Structure__c</referenceTo>
        <relationshipLabel>Commission Agreement</relationshipLabel>
        <relationshipName>Commission_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commission Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Due_Date_Calculation</fullName>
        <active>true</active>
        <description>Enforces that all applicable fields for proper due date calculation are populated.</description>
        <errorConditionFormula>OR(
AND(
NOT(ISBLANK( First_Payroll_Cycle_End_Date__c )),
OR(
ISBLANK( First_Payroll_Pay_Date__c ),
ISBLANK( Pay_Period_Frequency__c )
)
),
AND(
NOT(ISBLANK( First_Payroll_Pay_Date__c )),
OR(
ISBLANK( First_Payroll_Cycle_End_Date__c ),
ISBLANK( Pay_Period_Frequency__c )
)
),
AND(
NOT(ISBLANK( Pay_Period_Frequency__c )),
OR(
ISBLANK( First_Payroll_Cycle_End_Date__c ),
ISBLANK( First_Payroll_Pay_Date__c )
)
)
)</errorConditionFormula>
        <errorMessage>Please populate all payroll related fields.</errorMessage>
    </validationRules>
</CustomObject>